[package]
name = "zen_session_restore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
cpp = "0.5"
dirs = "6.0"
lz4_flex = "0.11"
qmetaobject = "0.2.10"
qttypes = { version = "0.2.12", features = ["qtquickcontrols2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"

[build-dependencies]
cpp_build = "0.5"
