[package]
name = "zen_session_restore"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
cpp = "0.5"
dirs = "6.0"
lz4_flex = "0.11"
md5 = "0.8"
qmetaobject = "0.2.10"
qttypes = { version = "0.2.12", features = ["qtquickcontrols2"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.37"
url = "2.5"

[build-dependencies]
cpp_build = "0.5"
